# Nautilus-Planning

./: .env  .gitignore  AGENTS.md  Research_task_Lighter.txt  debug_nado.py  findings.md  progress.md  research_task.txt  scaffold_nado.py  task_plan.md
builder/auth-scraper/: AGENTS.md  Makefile  pyproject.toml  reproduce_issue.py
builder/auth-scraper/config/: dex-canonical-env.schema.json
builder/auth-scraper/env_example/: env_01xyz_example  env_apex_omni_example  env_backpack_example  env_edgex_example  env_extended_example  env_grvt_example  env_hyperliquid_example  env_lighter_example  env_nado_example  env_paradex_example  env_standx_example
builder/auth-scraper/src/: auth_builders.py  dex_config.py  public_clients.py
builder/auth-scraper/tests/: test_auth_builders_unit.py  test_private_endpoints_integration.py  test_public_data_retrieval.py  test_schema_generation.py
builder/auth-scraper/tools/: __init__.py  check_apex_omni_login.py  check_edgex_login.py  check_lighter_login.py  check_nado_login.py  check_paradex_login.py  demo_grvt_auth.py  demo_lighter_auth.py  demo_standx_auth.py  probe_edgex.py  probe_grvt.py  probe_lighter.py  probe_standx.py  scrape_to_schema.py
builder/snapshots/lighter/rust/: Cargo.toml  config.rs  error.rs
builder/snapshots/lighter/rust/common/: consts.rs  urls.rs
builder/snapshots/lighter/rust/http/: client.rs  signing.rs
builder/snapshots/lighter/rust/lighter/src/: config.rs  error.rs
builder/snapshots/lighter/rust/nautilus_adapter/lighter/: config.rs  error.rs  lib.rs
builder/snapshots/lighter/rust/parsing/: models.rs
builder/snapshots/lighter/rust/python/: mod.rs  urls.rs
builder/snapshots/lighter/rust/src/: config.rs  error.rs
builder/snapshots/lighter/rust/src/common/: consts.rs  credential.rs  enums.rs  models.rs  urls.rs
builder/snapshots/lighter/rust/src/http/: client.rs  error.rs  mod.rs  models.rs  parse.rs  signing.rs  tests.rs
builder/snapshots/lighter/rust/src/parsing/: models.rs
builder/snapshots/lighter/rust/src/python/: bindings.rs  enums.rs  http.rs  mod.rs  websocket.rs
builder/snapshots/lighter/rust/websocket/: client.rs
builder/templates/rust_crate_template/: Cargo.toml  pyproject.toml
builder/templates/rust_crate_template/my_exchange/: __init__.py
builder/templates/rust_crate_template/src/: config.rs  error.rs  lib.rs
builder/templates/rust_crate_template/src/common/: consts.rs  credential.rs  enums.rs  models.rs  urls.rs
builder/templates/rust_crate_template/src/data/: mod.rs
builder/templates/rust_crate_template/src/execution/: mod.rs
builder/templates/rust_crate_template/src/http/: client.rs  error.rs  mod.rs  parse.rs
builder/templates/rust_crate_template/src/python/: enums.rs  urls.rs  websocket.rs
builder/templates/rust_crate_template/src/websocket/: client.rs  error.rs  handler.rs  messages.rs
nautilus-dinger/: .env.example  AGENTS.md  Cargo.toml  Makefile  README.md  pyproject.toml
nautilus-dinger/crates/adapters/: AGENTS.md
nautilus-dinger/crates/adapters/ApexOmni/: Cargo.toml
nautilus-dinger/crates/adapters/ApexOmni/src/: config.rs
nautilus-dinger/crates/adapters/Grvt/: Cargo.toml
nautilus-dinger/crates/adapters/Grvt/src/: config.rs  lib.rs
nautilus-dinger/crates/adapters/Lighter/: Cargo.toml  pyproject.toml
nautilus-dinger/crates/adapters/Lighter/src/: config.rs  error.rs  lib.rs
nautilus-dinger/crates/adapters/Nado/: Cargo.toml  pyproject.toml
nautilus-dinger/crates/adapters/Nado/src/: config.rs  error.rs  lib.rs
nautilus-dinger/crates/adapters/O1xyz/src/: config.rs
nautilus-dinger/crates/adapters/Paradex/: Cargo.toml
nautilus-dinger/crates/adapters/Paradex/src/: config.rs  lib.rs
nautilus-dinger/crates/adapters/StandX/: .env_example  Cargo.toml  config.rs  error.rs  lib.rs  pyproject.toml
nautilus-dinger/crates/adapters/StandX/common/: consts.rs  urls.rs
nautilus-dinger/crates/adapters/StandX/http/: client.rs  signing.rs
nautilus-dinger/crates/adapters/StandX/parsing/: models.rs
nautilus-dinger/crates/adapters/StandX/python/: mod.rs  urls.rs
nautilus-dinger/crates/adapters/StandX/src/: config.rs  error.rs
nautilus-dinger/crates/adapters/StandX/websocket/: client.rs
nautilus-dinger/crates/adapters/edgex/: .env_example  Cargo.toml  pyproject.toml
nautilus-dinger/crates/adapters/edgex/src/: config.rs  error.rs  lib.rs
nautilus-dinger/crates/dinger-core/: Cargo.toml
nautilus-dinger/crates/dinger-core/src/: lib.rs
nautilus-dinger/nautilus_adapter/: cli.py
nautilus-dinger/nautilus_adapter/adapters/: AGENTS.md
nautilus-dinger/nautilus_adapter/adapters/ApexOmni/: constants.py  data.py  factories.py
nautilus-dinger/nautilus_adapter/adapters/Grvt/: constants.py
nautilus-dinger/nautilus_adapter/adapters/Lighter/: .env_example  backend.py  config.py  constants.py  data.py  execution.py  factories.py  providers.py
nautilus-dinger/nautilus_adapter/adapters/Lighter/tests/: test_replay.py
nautilus-dinger/nautilus_adapter/adapters/Nado/: .env_example  config.py  constants.py  data.py  execution.py  factories.py  providers.py
nautilus-dinger/nautilus_adapter/adapters/Nado/tests/: test_replay.py
nautilus-dinger/nautilus_adapter/adapters/O1xyz/: config.py  constants.py  factories.py  providers.py
nautilus-dinger/nautilus_adapter/adapters/Paradex/: config.py  data.py  execution.py  factories.py  providers.py
nautilus-dinger/nautilus_adapter/adapters/StandX/: __init__.py  config.py  constants.py  data.py  execution.py  factories.py  providers.py
nautilus-dinger/nautilus_adapter/adapters/StandX/tests/: __init__.py
nautilus-dinger/nautilus_adapter/adapters/edgex/: config.py  constants.py  data.py  execution.py  factories.py  providers.py
nautilus-dinger/nautilus_adapter/adapters/edgex/tests/: test_replay.py
nautilus-dinger/scripts/: lighter_market_canary.py  lighter_strategy_runner.py  paradex_assert_log.py  paradex_market_canary.py  paradex_strategy_runner.py  run_generate.py  standx_market_canary.py  standx_parity_suite.py  standx_strategy_runner.py  strategy_common.py
nautilus-dinger/tests/: test_adapters.py
(+419 files in other folders)
