[package]
name = "{{EXCHANGE_LOWER}}"
version = "0.1.0"
edition = "2021"

[lib]
name = "{{EXCHANGE_LOWER}}"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = []
data = []
execution = []

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures = "0.3"
thiserror = "1.0"
anyhow = "1.0"
url = "2.4"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
http = "1.0"
bytes = "1.5"
hyper = { version = "1.2", features = ["full"] }
hyper-util = { version = "0.1", features = ["full", "tokio", "client-legacy"] }
http-body-util = "0.1"
nautilus_model = { git = "https://github.com/nautechsystems/nautilus_trader", tag = "v1.189.0" }
nautilus_common = { git = "https://github.com/nautechsystems/nautilus_trader", tag = "v1.189.0" }
nautilus_network = { git = "https://github.com/nautechsystems/nautilus_trader", tag = "v1.189.0" }
