[package]
name = "nautilus-lighter"
version = "0.1.0"
edition = "2021"

[lib]
name = "nautilus_lighter"
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1.36", features = ["full"] }
hyper = { version = "1.2", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio"] }
hyper-rustls = "0.26"
http-body-util = "0.1"
tower = "0.4"
governor = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
chrono = "0.4"
pyo3 = { version = "0.20", features = ["extension-module"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

[profile.release]
opt-level = 3
