[package]
name = "lighter"
version = "0.1.0"
edition = "2024"

[lib]
name = "lighter"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = []
data = []
execution = []
test_utils = []
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["chrono", "hashbrown", "indexmap", "macros", "rust_decimal", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
# reqwest provided by nautilus_network
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures = "0.3.31"
thiserror = "2.0.17"
anyhow = "1.0.100"
url = "2.5.7"
nautilus_model = { package = "nautilus-model", git = "https://github.com/nautechsystems/nautilus_trader", tag = "v1.222.0", features = ["python"] }
nautilus_common = { package = "nautilus-common", git = "https://github.com/nautechsystems/nautilus_trader", tag = "v1.222.0", features = ["python", "live"] }
nautilus_network = { package = "nautilus-network", git = "https://github.com/nautechsystems/nautilus_trader", tag = "v1.222.0", features = ["python"] }
nautilus_core = { package = "nautilus-core", git = "https://github.com/nautechsystems/nautilus_trader", tag = "v1.222.0", features = ["python"] }
