[package]
name = "standx"
version = "0.1.0"
edition = "2024"

[lib]
name = "standx"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = []
data = []
execution = []
test_utils = []
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["chrono", "hashbrown", "indexmap", "macros", "rust_decimal", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures = "0.3.31"
thiserror = "2.0.17"
anyhow = "1.0.100"
url = "2.5.7"
http = "1.4.0"
bytes = "1.11.0"
hyper = { version = "1.2", features = ["full"] }
hyper-util = { version = "0.1", features = ["full", "tokio", "client-legacy"] }
http-body-util = "0.1.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = "2.1"
bs58 = "0.5"
base64 = "0.22"
nautilus_model = { package = "nautilus-model", git = "https://github.com/nautechsystems/nautilus_trader", tag = "v1.222.0", features = ["python"] }
nautilus_common = { package = "nautilus-common", git = "https://github.com/nautechsystems/nautilus_trader", tag = "v1.222.0", features = ["python", "live"] }
nautilus_network = { package = "nautilus-network", git = "https://github.com/nautechsystems/nautilus_trader", tag = "v1.222.0", features = ["python"] }
nautilus_core = { package = "nautilus-core", git = "https://github.com/nautechsystems/nautilus_trader", tag = "v1.222.0", features = ["python"] }
